# theshy_local

./: Cargo.toml  README.md  build.rs  theshy-local-manifest.rc  theshy-local.exe.manifest  theshy.ini
src/: background.rs  gate.rs  main.rs  network.rs  ui.rs
