[package]
name = "shy_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lucian = "0.2"
native-windows-gui = "1.0.12"
native-windows-derive = "1.0.3"

[build-dependencies]
embed-resource = "1.7"

[patch.crates-io]
lucian = { path = '../lucian' }
native-windows-derive = { path = '../native-windows-derive' }
