[package]
name = "theshy_local"
version = "0.1.1"
edition = "2021"
description = "a socks5 proxy written in Rust (this is the local client side)"
license = "GPL-3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
omg-cool = "0.1.1"
lucian = "0.2.1"
native-windows-gui = "1.0.12"
native-windows-derive = "1.0.5"

[patch.crates-io]
omg-cool = { path = '../omg-cool' }
lucian = { path = '../lucian' }

[build-dependencies]
embed-resource = "1.7"

